@@ -1,112 +1,140 @@
 package ru.baranova.spring.dao;
 
-import org.junit.jupiter.api.*;
-import org.mockito.Mock;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.PropertySource;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.ActiveProfiles;
 import ru.baranova.spring.dao.reader.ReaderDao;
 import ru.baranova.spring.domain.Answer;
 import ru.baranova.spring.domain.Option;
 import ru.baranova.spring.domain.Question;
+import ru.baranova.spring.domain.QuestionOneAnswer;
+import ru.baranova.spring.domain.QuestionWithOptionAnswers;
+import ru.baranova.spring.domain.QuestionWithoutAnswer;
+
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-@SpringBootTest
+
 @DisplayName("Test class QuestionDaoCsv")
+@ActiveProfiles("questiondaocsv")
+@SpringBootTest(classes = {QuestionDaoCsvActualConfig.class})
 public class QuestionDaoCsvTest {
+    @Autowired
     private QuestionDaoCsv questionDaoCsv;
-    @Mock
+    @MockBean
     private ReaderDao readerDaoFile;
-    private String initialStringUnansweredQuestion;
-    private String initialStringOpenEndedQuestion;
-    private String initialString;
-    private String question;
-    private String rightAnswer;
-    private String optionOne;
-    private String optionTwo;
+
+    @Autowired
+    private QuestionDaoCsvActualConfig questionDaoCsvActualConfig;
+    private Question questionWithOptionAnswers;
+    private Question questionOneAnswer;
+    private Question questionWithoutAnswer;
 
     @BeforeEach
     void setUp() {
-        questionDaoCsv = new QuestionDaoCsv(readerDaoFile);
-        questionDaoCsv.setQuestionPosition(1);
-        questionDaoCsv.setRightAnswerPosition(2);
-        questionDaoCsv.setDelimiter(";");
-        questionDaoCsv.setPath("testQuestionnaire.csv");
-        initialStringUnansweredQuestion = "Question First";
-        initialStringOpenEndedQuestion = "Question First;Answer Second";
-        initialString = "Question First;Answer Second;Answer First;Answer Second";
-        question = "Question First";
-        rightAnswer = "Answer Second";
-        optionOne = "Answer First";
-        optionTwo = "Answer Second";
+        questionWithOptionAnswers = new QuestionWithOptionAnswers(questionDaoCsvActualConfig.getQuestion()
+                , new Answer(questionDaoCsvActualConfig.getRightAnswer())
+                , List.of(new Option(questionDaoCsvActualConfig.getOptionOne())
+                , new Option(questionDaoCsvActualConfig.getOptionTwo())));
+        questionOneAnswer = new QuestionOneAnswer(questionDaoCsvActualConfig.getQuestion(), new Answer(questionDaoCsvActualConfig.getRightAnswer()));
+        questionWithoutAnswer = new QuestionWithoutAnswer(questionDaoCsvActualConfig.getQuestion());
     }
 
     @Test
-    @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct List Question")
-    void shouldHaveCorrectLoadQuestion() {
+    @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct List QuestionWithOptionAnswers")
+    void shouldHaveCorrectLoadQuestion_QuestionWithOptionAnswers() {
         Mockito.when(readerDaoFile.getResource(questionDaoCsv.getPath()))
-                .thenReturn(new ByteArrayInputStream(initialString.getBytes(StandardCharsets.UTF_8)));
-                List<Question> expected = questionDaoCsv.loadQuestion();
-        List<Question> actual = new ArrayList<>();
-        actual.add(new Question(question, new Answer(rightAnswer), Arrays.asList(new Option(optionOne), new Option(optionTwo))));
+                .thenReturn(new ByteArrayInputStream(questionDaoCsvActualConfig.getInitialStringQuestionWithOptionAnswers().getBytes(StandardCharsets.UTF_8)));
+        List<Question> expected = questionDaoCsv.loadQuestion();
+        List<Question> actual = List.of(questionWithOptionAnswers);
+
+        Assertions.assertIterableEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct List QuestionOneAnswer")
+    void shouldHaveCorrectLoadQuestion_QuestionOneAnswer() {
+        Mockito.when(readerDaoFile.getResource(questionDaoCsv.getPath()))
+                .thenReturn(new ByteArrayInputStream(questionDaoCsvActualConfig.getInitialStringQuestionOneAnswer().getBytes()));
+        List<Question> expected = questionDaoCsv.loadQuestion();
+        List<Question> actual = List.of(questionOneAnswer);
+
+        Assertions.assertIterableEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct List QuestionWithoutAnswer")
+    void shouldHaveCorrectLoadQuestion_QuestionWithoutAnswer() {
+        Mockito.when(readerDaoFile.getResource(questionDaoCsv.getPath()))
+                .thenReturn(new ByteArrayInputStream(questionDaoCsvActualConfig.getInitialStringQuestionWithoutAnswer().getBytes()));
+        List<Question> expected = questionDaoCsv.loadQuestion();
+        List<Question> actual = List.of(questionWithoutAnswer);
 
         Assertions.assertIterableEquals(expected, actual);
     }
 
     @Test
     @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct empty List Question")
-    void shouldHaveEmptyList_Null() {
+    void shouldHaveEmptyList_NullByPath() {
         Mockito.when(readerDaoFile.getResource(questionDaoCsv.getPath()))
                 .thenReturn(null);
         Assertions.assertEquals(questionDaoCsv.loadQuestion(), new ArrayList<>());
     }
+
     @Test
     @DisplayName("Test class QuestionDaoCsv, method loadQuestion, return correct empty List Question")
-    void shouldHaveEmptyList_UncorrectPath() {
-        questionDaoCsv.setPath("");
-        Mockito.when(readerDaoFile.getResource(questionDaoCsv.getPath()))
-                .thenReturn(null);
+    void shouldHaveEmptyList_IncorrectPath() {
+        questionDaoCsv.setPath("IncorrectPath");
         Assertions.assertEquals(questionDaoCsv.loadQuestion(), new ArrayList<>());
     }
 
     @Test
-    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List with unanswered question")
-    void shouldHaveCorrectParseStrings_1() {
-        List<String> initialStringList = new ArrayList<>();
-        initialStringList.add(initialStringUnansweredQuestion);
-
+    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List with QuestionWithOptionAnswers")
+    void shouldHaveCorrectParseStrings_QuestionWithOptionAnswers() {
+        List<String> initialStringList = List.of(questionDaoCsvActualConfig.getInitialStringQuestionWithOptionAnswers());
         List<Question> expected = questionDaoCsv.parseStrings(initialStringList);
-
-        List<Question> actual = new ArrayList<>();
-        actual.add(new Question(question));
-
-        Assertions.assertIterableEquals(expected, actual);
-    }
-    @Test
-    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List with open-ended question")
-    void shouldHaveCorrectParseStrings_2() {
-        List<String> initialStringList = Arrays.asList(initialStringOpenEndedQuestion);
-        List<Question> expected = questionDaoCsv.parseStrings(initialStringList);
-
-        List<Question> actual = Arrays.asList(new Question(question, new Answer(rightAnswer)));
+        List<Question> actual = List.of(questionWithOptionAnswers);
 
         Assertions.assertIterableEquals(expected, actual);
     }
 
     @Test
-    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List")
-    void shouldHaveCorrectParseStrings_3() {
-        List<String> initialStringList = Arrays.asList(initialString);
-
+    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List QuestionOneAnswer")
+    void shouldHaveCorrectParseStrings_QuestionOneAnswer() {
+        List<String> initialStringList = List.of(questionDaoCsvActualConfig.getInitialStringQuestionOneAnswer());
         List<Question> expected = questionDaoCsv.parseStrings(initialStringList);
+        List<Question> actual = List.of(questionOneAnswer);
 
-        List<Option> optionList = Arrays.asList(new Option(optionOne), new Option(optionTwo));
-        List<Question> actual = Arrays.asList(new Question(question, new Answer(rightAnswer), optionList));
+        Assertions.assertIterableEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct List QuestionWithoutAnswer")
+    void shouldHaveCorrectParseStrings_QuestionWithoutAnswer() {
+        List<String> initialStringList = List.of(questionDaoCsvActualConfig.getInitialStringQuestionWithoutAnswer());
+        List<Question> expected = questionDaoCsv.parseStrings(initialStringList);
+        List<Question> actual = List.of(questionWithoutAnswer);
 
         Assertions.assertEquals(expected, actual);
     }
+
+    @Test
+    @DisplayName("Test class QuestionDaoCsv, method parseStrings, return correct empty List")
+    void shouldHaveCorrectParseStrings_EmptyList() {
+        List<String> initialStringList = new ArrayList<>();
+        List<Question> expected = questionDaoCsv.parseStrings(initialStringList);
+        List<Question> actual = new ArrayList<>();
+
+        Assertions.assertEquals(expected, actual);
+    }
+
 }
+
